--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
 .App {
   text-align: center;
+  max-width: 1080px;
+  margin: 0 auto;
+  padding-top: 50px;
+}
+.progress_bar_border {
+  width: 100%;
+  height: 5px;
+  border: 1px solid black
+}
+.progress_bar {
+  background-color: green;
+  width: 0%;
+  height: 5px;
 }
