--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,14 @@
 }
 .progress_bar_border {
   width: 100%;
-  height: 5px;
+  height: 9px;
   border: 1px solid black
 }
 .progress_bar {
   background-color: green;
   width: 0%;
-  height: 5px;
+  height: 9px;
+  transition: all 0.2s;
 }
 audio {
   display: none;
